# CudaSift

./: CMakeLists.txt  cudaImage.cu  cudaSift.h  cudaSiftD.cu  cudaSiftH.cu  cudaSiftH.h  mainSift.cpp
.github/workflows/: main.yml
cmake/: FindCUDALibs.cmake  FindTurbojpeg.cmake
cudasift/: CMakeLists.txt
cudasift/include/cudasift/: Covariance.hpp  SiftDetector.hpp  cudaImage.h  cudaSift.h  cudaSiftD.h  cudaSiftH.h  cudautils.h  nvjpegUtils.h
cudasift/src/: Covariance.cpp  Covariance.cu  SiftDetector.cpp  cudaImage.cu  cudaSiftD.cu  cudaSiftH.cu  imconversion.cu  matching.cu  nvjpegUtils.cpp
examples/: CMakeLists.txt  bulkDetect.cpp  mainSift.cpp
